cargo-features = ["strip"]

[package]
name = "deno_rusty_markdown"
version = "0.3.0"
authors = ["Sr Komodo <komodosr@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.69"
pulldown-cmark = "0.8.0"
js-sys = "0.3.46"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
