cargo-features = ["strip"]

[package]
name = "deno_rusty_markdown"
version = "0.4.1"
authors = ["Komodo"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.75"
pulldown-cmark = "0.8.0"
js-sys = "0.3.52"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
