cargo-features = ["strip"]

[package]
name = "deno_rusty_markdown"
version = "0.4.1"
authors = ["Komodo"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
pulldown-cmark = "0.9.0"
js-sys = "0.3.55"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
